# AGH

./: .gitignore
SEM_1/C#/: Program.cs
SEM_1/C/Lab_3/Before_Lab/: CMakeLists.txt  readme.md
SEM_1/C/Lab_3/Before_Lab/Algorithms/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
SEM_1/C/RedBlackTree/: CMakeLists.txt  main.c  readme.md
SEM_1/C/RedBlackTree/AddLib/: add.c  add.h
SEM_1/C/RedBlackTree/AddLib/HelpersLib/: addHelpers.c  addHelpers.h
SEM_1/C/RedBlackTree/DeleteLib/: delete.c  delete.h
SEM_1/C/RedBlackTree/DeleteLib/HelpersLib/: deleteHelpers.c  deleteHelpers.h
SEM_1/C/RedBlackTree/HelpersLib/: helpers.c  helpers.h
SEM_1/C/RedBlackTree/SharedLib/: shared.c  shared.h
SEM_2/C/Lab5/: CMakeLists.txt  main.c  readme.md
SEM_2/C/Lab5/Algorithms/: Ex1.c  Ex2.c  Ex3.c  Ex4.c  Ex5.c
SEM_2/C/Lab7/: CMakeLists.txt  readme.md
SEM_2/C/Lab7/Algorithms/: Ex1.c  Ex2.c  Ex3.c  Ex4.c
SEM_2/C/Lab8/: CMakeLists.txt  main.c  readme.md
SEM_2/C/Lab8/Algorithms/: Ex1.c  Ex2.c  Ex3.c
SEM_2/C/Lab9/: CMakeLists.txt  readme.md
SEM_2/C/Lab9/Algorithms/: Ex1.c  Ex2.c  Ex3.c
SEM_3/PO/: CMakeLists.txt
SEM_3/PO/src/lab_1/src/: Makefile  main  main.cpp
SEM_3/PO/src/lab_10/: CMakeLists.txt
SEM_3/PO/src/lab_10/include/: Wymierne.h  Zespolone.h
SEM_3/PO/src/lab_11/: CMakeLists.txt
SEM_3/PO/src/lab_11/include/: Complex.h  Vector.h
SEM_3/PO/src/lab_11/src/: Vector.cpp
SEM_3/PO/src/lab_12/: CMakeLists.txt
SEM_3/PO/src/lab_12/include/: FVector.h
SEM_3/PO/src/lab_13/: CMakeLists.txt
SEM_3/PO/src/lab_13/include/: functions.h
SEM_3/PO/src/lab_13/src/: functionVector.cpp
SEM_3/PO/src/lab_14/: main.cpp
SEM_3/PO/src/lab_14/include/: PVec.h
SEM_3/PO/src/lab_2/src/: main.cpp
SEM_3/PO/src/lab_3/: CMakeLists.txt
SEM_3/PO/src/lab_3/include/: pesel.h
SEM_3/PO/src/lab_3/src/: helpers.cpp
SEM_3/PO/src/lab_4/: CMakeLists.txt  main.cpp
SEM_3/PO/src/lab_4/include/: MyList.h
SEM_3/PO/src/lab_5/include/: MyText.h
SEM_3/PO/src/lab_5/src/: MyText.cpp
SEM_3/PO/src/lab_7/: CMakeLists.txt  main.cpp
SEM_3/PO/src/lab_7/include/: MyList.h
SEM_3/PO/src/lab_7/src/: MyList.cpp
SEM_3/PO/src/lab_8/: CMakeLists.txt  main.cpp
SEM_3/PO/src/lab_8/include/: Student.h
SEM_3/PO/src/lab_8/src/: Grade.cpp
SEM_3/PO/src/lab_9/: CMakeLists.txt  main.cpp
SEM_3/PO/src/lab_9/include/: Point.h
SEM_3/PO/src/lab_9/src/: Point.cpp
SEM_3/PO/src/z__p/lab_10/: main.cpp
SEM_3/PO/src/z__p/lab_11/: CMakeLists.txt
SEM_3/PO/src/z__p/lab_11/include/: Vector.h
SEM_3/PO/src/z__p/lab_12/: main.cpp
SEM_3/PO/src/z__p/lab_12/include/: linkedList.h
SEM_3/PO/src/z__p/lab_12/src/: point.cpp
SEM_3/PO/src/z__p/lab_13/: CMakeLists.txt
SEM_3/PO/src/z__p/lab_13/src/: Vector.cpp
SEM_3/PO/src/z__p/lab_14/: CMakeLists.txt
SEM_3/PO/src/z__p/lab_14/include/: Double.h  Wymierne.h
SEM_3/PO/src/z__p/lab_14/src/: Double.cpp  Wymierne.cpp
SEM_3/PO/src/z__p/lab_15/: CMakeLists.txt
SEM_3/PO/src/z__p/lab_15/include/: Complex.h  Double.h  Vector.h
SEM_3/PO/src/z__p/lab_15/src/: Double.cpp
SEM_3/PO/src/z__p/lab_16/: CMakeLists.txt
SEM_3/PO/src/z__p/lab_17/: main.cpp
SEM_3/PO/src/z__p/lab_18/: CMakeLists.txt  main.cpp
SEM_3/PO/src/z__p/lab_19/: main.cpp
SEM_3/PO/src/z__p/lab_5/: main.cpp
SEM_3/PO/src/z__p/lab_6/: .replit  CMakeLists.txt
SEM_3/PO/src/z__p/lab_8/: CMakeLists.txt
SEM_4/GFK/labs/lab1-2/lab_2/: CMakeLists.txt
SEM_4/MN/code/: CMakeLists.txt
SEM_4/MN/code/src/helpers/: gsl_helpers.h  linalg_helpers.h  matrix_helpers.h  wolfram_alpha_helpers.h
SEM_4/MN/code/src/lab_1/: CMakeLists.txt  a.out  vz  zad1.c  zad2.c  zad3.c  zad4.c
SEM_4/MN/code/src/lab_2/: CMakeLists.txt  matrix.txt  zad1.c
SEM_4/MN/code/src/lab_3/: CMakeLists.txt  zad1.c
SEM_4/PO/: CMakeLists.txt
SEM_4/PO/src/lab_1/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_1/include/: Point.h
SEM_4/PO/src/lab_1/src/: Point.cpp
SEM_4/PO/src/lab_10/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_10/include/: obj.h
SEM_4/PO/src/lab_11/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_11/include/: school.h  student.h  table.h
SEM_4/PO/src/lab_11/src/: school.cpp  student.cpp
SEM_4/PO/src/lab_12/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_12/include/: common.h  data.h  person.h
SEM_4/PO/src/lab_13/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_13/include/: main.h
SEM_4/PO/src/lab_14/: CMakeLists.txt  main.cpp  main_2.txt
SEM_4/PO/src/lab_2/: CMakeLists.txt  labka  main.cpp
SEM_4/PO/src/lab_2/include/: MyArray.h
SEM_4/PO/src/lab_2/src/: MyArr.cpp
SEM_4/PO/src/lab_3/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_3/include/: FilterCriteria.h  Functors.h  List.h
SEM_4/PO/src/lab_3/src/: List.cpp
SEM_4/PO/src/lab_4/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_4/include/: main.h  ubranie.h  zelazko.h
SEM_4/PO/src/lab_5/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_5/include/: abstract.h  main.h  shape.h
SEM_4/PO/src/lab_6/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_6/include/: Dir.h  File.h  Node.h
SEM_4/PO/src/lab_7/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_7/include/: CyclicList.h  Node.h  NodeSpec.h
SEM_4/PO/src/lab_8/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_8/include/: greaterclass.h  greatertemp.h
SEM_4/PO/src/lab_8/src/: greaterclass.cpp
SEM_4/PO/src/lab_9/: CMakeLists.txt  main.cpp
SEM_4/PO/src/lab_9/include/: wektor.h
SEM_4/PO/src/z__p/lab__1/: CMakeLists.txt
SEM_4/PO/src/z__p/lab__10/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__11/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__12/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__13/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__15/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__2/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__3/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__4/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__5/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__6/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__7/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__8/: CMakeLists.txt  main.cpp
SEM_4/PO/src/z__p/lab__9/: CMakeLists.txt  labka  main.cpp
(+543 files in other folders)
