cmake_minimum_required(VERSION 3.13)
project("cpp_sem_3" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory("src/lab_1")
add_subdirectory("src/lab_2")
add_subdirectory("src/lab_3")
add_subdirectory("src/lab_4")
add_subdirectory("src/lab_5")
add_subdirectory("src/lab_7")
add_subdirectory("src/lab_8")
add_subdirectory("src/lab_9")
add_subdirectory("src/lab_10")
add_subdirectory("src/lab_11")
add_subdirectory("src/lab_12")
add_subdirectory("src/lab_13")
add_subdirectory("src/lab_14")
add_subdirectory("src/z__p/lab_3")
add_subdirectory("src/z__p/lab_4")
add_subdirectory("src/z__p/lab_5")
add_subdirectory("src/z__p/lab_6")
add_subdirectory("src/z__p/lab_7")
add_subdirectory("src/z__p/lab_8")
add_subdirectory("src/z__p/lab_9")
add_subdirectory("src/z__p/lab_10")
add_subdirectory("src/z__p/lab_11")
add_subdirectory("src/z__p/lab_12")
add_subdirectory("src/z__p/lab_13")
add_subdirectory("src/z__p/lab_14")
add_subdirectory("src/z__p/lab_15")
add_subdirectory("src/z__p/lab_16")
add_subdirectory("src/z__p/lab_17")
add_subdirectory("src/z__p/lab_18")
add_subdirectory("src/z__p/lab_19")