cmake_minimum_required(VERSION 3.13)
project("cpp_sem_4" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory("src/lab_1")
add_subdirectory("src/lab_2")
add_subdirectory("src/lab_3")
add_subdirectory("src/lab_4")
add_subdirectory("src/lab_5")
add_subdirectory("src/lab_6")
add_subdirectory("src/lab_7")
add_subdirectory("src/lab_8")
add_subdirectory("src/lab_9")
add_subdirectory("src/lab_10")
add_subdirectory("src/lab_11")
add_subdirectory("src/lab_12")
add_subdirectory("src/lab_13")
add_subdirectory("src/lab_14")

add_subdirectory("src/z__p/lab__1")
add_subdirectory("src/z__p/lab__2")
add_subdirectory("src/z__p/lab__3")
add_subdirectory("src/z__p/lab__4")
add_subdirectory("src/z__p/lab__5")
add_subdirectory("src/z__p/lab__6")
add_subdirectory("src/z__p/lab__7")
add_subdirectory("src/z__p/lab__8")
add_subdirectory("src/z__p/lab__9")
add_subdirectory("src/z__p/lab__10")
add_subdirectory("src/z__p/lab__11")
add_subdirectory("src/z__p/lab__12")
add_subdirectory("src/z__p/lab__13")
