cmake_minimum_required(VERSION 3.13)
project("MN_sem_4" LANGUAGES C)

add_subdirectory("src/lab_1")
add_subdirectory("src/lab_2")
add_subdirectory("src/lab_3")
add_subdirectory("src/lab_4/1")
add_subdirectory("src/lab_4/2")
add_subdirectory("src/lab_4/3")
add_subdirectory("src/lab_5/1")
add_subdirectory("src/lab_5/2")
add_subdirectory("src/lab_6/1")
add_subdirectory("src/lab_6/2")
add_subdirectory("src/lab_6/gen_A")
add_subdirectory("src/lab_6/gen_X")
add_subdirectory("src/lab_6/gen_B")
add_subdirectory("src/lab_7/1")
add_subdirectory("src/lab_7/2")
add_subdirectory("src/lab_8/1")
add_subdirectory("src/lab_8/2")
add_subdirectory("src/lab_8/3")
add_subdirectory("src/lab_9/1")
add_subdirectory("src/lab_9/2")
add_subdirectory("src/lab_9/3")
add_subdirectory("src/lab_10/1")
add_subdirectory("src/lab_11/1")
add_subdirectory("src/lab_11/2")
add_subdirectory("src/lab_12/1")
add_subdirectory("src/lab_12/2")


add_subdirectory("src/pd/pd_1")
add_subdirectory("src/pd/pd_2/1")
add_subdirectory("src/pd/pd_2/2")
